--- a/.editorconfig
+++ b/.editorconfig
@@ -13,5 +13,6 @@ indent_style = space
 indent_size = 4
 end_of_line = lf
 charset = utf-8
-trim_trailing_whitespace = false # These are the correct rules for coding standards, but fixing up old files causes git spam
+# These are the correct rules for coding standards, but fixing up old files causes git spam
+trim_trailing_whitespace = false
 insert_final_newline = false
